--- a/spec/fixtures/vcr_cassettes/user_can_search_for_house_members/user_submits_valid_state_name.yml
+++ b/spec/fixtures/vcr_cassettes/user_can_search_for_house_members/user_submits_valid_state_name.yml
@@ -8,7 +8,7 @@ http_interactions:
       string: ''
     headers:
       X-Api-Key:
-      - DONT_SHARE_MY_PROPUBLIC_SECRET_KEY
+      - "<PROPUBLICA_SECRET_KEY"
       User-Agent:
       - Faraday v2.7.4
       Accept-Encoding:
@@ -27,19 +27,19 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 05 Jul 2023 17:46:43 GMT
+      - Mon, 10 Jul 2023 01:26:14 GMT
       X-Amzn-Requestid:
-      - e1ff6ca9-5f35-4950-9cd7-597dfe3d94e9
+      - 5cff6ee1-9d72-4ad0-96bc-ec9e2291e65a
       Access-Control-Allow-Origin:
       - "*"
       Access-Control-Allow-Headers:
       - Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token
       X-Amz-Apigw-Id:
-      - HmfkpHUBoAMFdrw=
+      - H0uohGigoAMF9Ug=
       Access-Control-Allow-Methods:
       - GET,OPTIONS
       X-Amzn-Trace-Id:
-      - Root=1-64a5ac83-55eab48e4acc00e04b09a898;Sampled=0;lineage=5b3f852f:0
+      - Root=1-64ab5e36-341f75b646ac8a9e185afffb;Sampled=0;lineage=5b3f852f:0
       X-Cache:
       - Miss from cloudfront
       Via:
@@ -47,7 +47,7 @@ http_interactions:
       X-Amz-Cf-Pop:
       - DEN52-P2
       X-Amz-Cf-Id:
-      - 7d1du6nEV6bJCWP9Z1IvUe5ho6lAYm0HnLDQ09ikcaP6cz1y2h9okA==
+      - B_ZcvangL3HaaSA2X6kXK0TyIj5VoYr7ilYZBVSjksrTP5TUFQtvmA==
     body:
       encoding: UTF-8
       string: |
@@ -216,7 +216,7 @@ http_interactions:
                  "at_large": false
               }
         ]}
-  recorded_at: Wed, 05 Jul 2023 17:46:43 GMT
+  recorded_at: Mon, 10 Jul 2023 01:26:14 GMT
 - request:
     method: get
     uri: https://api.propublica.org/congress/v1/members/house/CO/current.json
@@ -225,7 +225,7 @@ http_interactions:
       string: ''
     headers:
       X-Api-Key:
-      - DONT_SHARE_MY_PROPUBLIC_SECRET_KEY
+      - "<PROPUBLICA_SECRET_KEY"
       User-Agent:
       - Faraday v2.7.4
       Accept-Encoding:
@@ -244,27 +244,27 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 05 Jul 2023 17:46:44 GMT
+      - Mon, 10 Jul 2023 01:26:14 GMT
       X-Amzn-Requestid:
-      - a9734292-ee01-447a-8eec-a6708d51de0c
+      - 91b5e7d9-8ed1-4457-b4e4-a703b7956931
       Access-Control-Allow-Origin:
       - "*"
       Access-Control-Allow-Headers:
       - Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token
       X-Amz-Apigw-Id:
-      - HmfktH7CIAMF1zQ=
+      - H0uolFUqIAMFzog=
       Access-Control-Allow-Methods:
       - GET,OPTIONS
       X-Amzn-Trace-Id:
-      - Root=1-64a5ac84-372cfbaa4f3dde30032a8ffe;Sampled=0;lineage=5b3f852f:0
+      - Root=1-64ab5e36-46e74de823b76e757f1617b1;Sampled=0;lineage=5b3f852f:0
       X-Cache:
       - Miss from cloudfront
       Via:
-      - 1.1 44e92eddc431cc09e1e2c5b24edc90f8.cloudfront.net (CloudFront)
+      - 1.1 f111faa3f37b2169cefb225b0f246234.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN52-P2
       X-Amz-Cf-Id:
-      - dWv-_lYz8ShNMXTb4e7jjiQbUfM_UGeRJ02ZH6itwajC0hbzCXJJXg==
+      - JLYl1HzedAA2AUIqqWj5azbToNF6umzZN079zSHYXLd6pK1d85hOPg==
     body:
       encoding: UTF-8
       string: |
@@ -433,5 +433,5 @@ http_interactions:
                  "at_large": false
               }
         ]}
-  recorded_at: Wed, 05 Jul 2023 17:46:44 GMT
+  recorded_at: Mon, 10 Jul 2023 01:26:14 GMT
 recorded_with: VCR 6.2.0
